--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,7 @@
 name: Deploy to Azure Web App
 
 on:
-  workflow-dispatch:
+  workflow_dispatch:
     inputs:
       environment:
         description: 'Environment to deploy to'
