--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,20 +1,15 @@
 name: Deploy to Azure Web App
 
 on:
-  workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Environment to deploy to'
-        required: true
-        default: 'production'
-#  workflow_run:
-#    workflows: ['Build and Upload Artifact']
-#    types:
-#      - completed
+  workflow_run:
+    workflows: ['Build and Upload Artifact']
+    types:
+      - completed
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
       - name: Download artifact
