--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,8 +13,10 @@ jobs:
 
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v4.1.0
+        uses: dawidd6/action-download-artifact@v3
         with:
+          workflow: Build and Upload Artifact
+          workflow_conclusion: success
           name: vue-build-20
           path: dist
 
